<resources>
    <string name="app_name">Cheers On Demand</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="name">Full Name</string>
    <string name="email">Email</string>
    <string name="cheers_on_demand">Cheers on Demand</string>
    <string name="get_started">Get started and discover the \nbest offers around you</string>
    <string name="signup">Sign Up</string>
    <string name="facebook_app_id">2183625151924410</string>
    <string name="fb_login_protocol_scheme">fb2183625151924410</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="agreement">By Signing Up, you agree with our</string>
    <string name="login">Login</string>
    <string name="log_in">Log In</string>
    <string name="skip_continue"><![CDATA[Skip & Continue]]></string>
    <string name="term_cond"><![CDATA[Terms & Conditions  & Privacy Policy]]></string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="location">Change Location</string>
    <string name="select_address">Select Address</string>
    <string name="select_a_location">Select  a Location</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="search_hint">Search for Brand, Type …</string>
    <string name="edit">Edit</string>
    <string name="wishList">Wishlist</string>
    <string name="my_orders">My Orders</string>
    <string name="my_orders_">My Orders</string>
    <string name="saved_add">Saved Addresses</string>
    <string name="payment_info">Payment Information</string>
    <string name="conn_acc">Connected Accounts</string>
    <string name="change_password">Change Password</string>
    <string name="help_center">Help Center</string>
    <string name="notification">Notifications</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="sign_in">Sign In</string>
    <string name="view_orders">View your orders, products, etc.</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="name_">Name</string>
    <string name="phone_no">Phone  No</string>
    <string name="save_profile">Save Profile</string>
    <string name="no_product_found">No Products found</string>
    <string name="no_product_in_cart_yet">No Products in cart yet !</string>
    <string name="no_product_found_">No Product(s) found.</string>
    <string name="no_product_available">No product(s) available.</string>
    <string name="try_search_diff">Try searching with a different terms or browse our categories.</string>
    <string name="browse_product">Browse Products</string>
    <string name="products">Products</string>
    <string name="my_cart">My Cart</string>
    <string name="add_to_wishlist">Add to wishlist</string>
    <string name="delete">Remove</string>
    <string name="view_all">View all</string>
    <string name="latest_addition">Latest Addition</string>
    <string name="no_notification_yet">No notifications yet !</string>
    <string name="browse_for_product_or_checkout">Browse for products or check out our latest additions.</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="clear_all">Clear all</string>
    <string name="password_validation">Enter a passsword with alphabets A-z and a symbol</string>
    <string name="enter_current_Password">Enter current password</string>
    <string name="reenter_new_password">Re-enter new password</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="password_change_succesfully">Password changed successfully !</string>
    <string name="you_can_browse_product">You can now go back and continue browsing products</string>
    <string name="enjoy_shopping">Enjoy Shopping !</string>
    <string name="enjoy_shopping_">Enjoy Shopping</string>
    <string name="go_to_profile">Go to Profile</string>
    <string name="create_new_password">Create New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="forgot_password_">Forgot Password</string>
    <string name="enter_your_register_email">Enter your registered Email and we’ll sent you a link to reset your password.</string>
    <string name="send_link">SEND LINK</string>
    <string name="continue_to_login">Continue to Login</string>
    <string name="Select_store">Select Store</string>
    <string name="enter_your_location">Enter a Location</string>
    <string name="detect_my_location">Detect my Location</string>
    <string name="using_gps">Using GPS</string>
    <string name="recent_searches">Recent Searches</string>
    <string name="search_result">Search Results</string>
    <string name="select_store">Choose your store</string>
    <string name="back">Back</string>
    <string name="submit">Submit</string>
    <string name="plz_select_store">Please select a store</string>
    <string name="specification">SPECIFICATIONS</string>
    <string name="quantity">Quantity</string>
    <string name="type">Type</string>
    <string name="alchohal_vol">Alcohol Volume</string>
    <string name="region">Region</string>
    <string name="desc">DESCRIPTION</string>
    <string name="similar_drinks">Similar Drinks</string>
    <string name="shared_image">shared_image</string>
    <string name="buy_now">Buy Now</string>
    <string name="qty">Qty.</string>
    <string name="this_product_no_longer_available">This product is not available in the selected store.</string>
    <string name="added_to_wishList">Added to wishlist</string>
    <string name="your_cart">Your Cart</string>
    <string name="amount">Amount</string>
    <string name="taxes">Taxes</string>
    <string name="tax">Tax</string>
    <string name="delivery_charges">Delivery Charges</string>
    <string name="apply_Coupen">Apply Coupon</string>
    <string name="coupen_applied">Applied Coupon</string>
    <string name="change_coupon">Change Coupon</string>
    <string name="total_amount">Total Amount</string>
    <string name="doller">$</string>
    <string name="subtotal">Sub Total</string>
    <string name="coupon_code">Coupon Code</string>
    <string name="enter_coupon_code">Enter Coupon Code</string>
    <string name="apply">Apply</string>
    <string name="or">OR</string>
    <string name="select_following">Select one of the following</string>
    <string name="terms_and_condition"><![CDATA[Terms & Conditions]]></string>
    <string name="applied">Applied</string>
    <string name="final_amount">Final Amount</string>
    <string name="brands_available">Brands available</string>
    <string name="products_available">products available</string>
    <string name="Explore">Explore</string>
    <string name="sort">Sort</string>
    <string name="filter">Filter</string>
    <string name="product_listing">Product Listing</string>
    <string name="price_range">Price Range</string>
    <string name="brand">Brand</string>
    <string name="category">Category</string>
    <string name="demo_min_label">Min</string>
    <string name="demo_max_label">Max</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="cancel">Cancel</string>
    <string name="added_to_cart">Added to cart</string>
    <string name="product_already_in_cart">Product already exist in your cart.</string>
    <string name="sort_by">Sort by</string>
    <string name="low_to_high">Price - Low to High</string>
    <string name="high_to_low">Price - High to Low</string>
    <string name="new_product">Newest Products</string>
    <string name="popularity">Popularity</string>
    <string name="filters">Filters</string>
    <string name="flat">Flat / House / Apartment No.</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="pincode">Pin Code</string>
    <string name="PhoneNumber">Phone Number</string>
    <string name="PhoneNumber_">Phone Number:</string>
    <string name="save_address">Save Address</string>
    <string name="update_address">Update Address</string>
    <string name="add_address">Add New Address</string>
    <string name="edit_address">Edit Address</string>
    <string name="delete_">Delete</string>
    <string name="saved_addresses">Saved Addresses</string>
    <string name="no_address_saved">No addresses saved !</string>
    <string name="no_address_have_been">No adresses have been saved to the address list yet !</string>
    <string name="add_an_address">Add an address</string>
    <string name="sub_category">Sub Category</string>
    <string name="categories">Categories</string>
    <string name="enter_search_name_brand">Search Name, Brand or Type</string>
    <string name="faq">FAQs</string>
    <string name="about_us">About us</string>
    <string name="contact_us">Contact us</string>
    <string name="how_it_works">How it works</string>
    <string name="terms_od_services">Terms of Service</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="store_name">Store Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="submit_request">Submit Request</string>
    <string name="become_partner">Become a partner</string>
    <string name="are_you_sure_logout">Are you sure you want to logout from Cheers On Demand ?</string>
    <string name="profile_updated">Profile has been updated successfully</string>
    <string name="card_header">NFN CARD</string>
    <string name="card_number_sample">XXXX XXXX XXXX </string>
    <string name="card_validity_label">VALID UPTO</string>
    <string name="card_validity_sample">MM/YY</string>
    <string name="card_name_sample">Card Holder</string>
    <string name="card_holders_name">Card Holder\'s Name</string>
    <string name="card_number">Card Number</string>
    <string name="card_validity">Expires</string>
    <string name="card_cvv">CVV/CVC Number</string>
    <string name="expires">expires</string>
    <string name="expires_mm_yy">Expiry (MM/YY)</string>
    <string name="cvv">CVV</string>
    <string name="add_card">Add Card</string>
    <string name="new_card">New Card</string>
    <string name="space"><![CDATA[&#160;]]></string>
    <string name="add_new_card">Add New Card</string>
    <string name="no_card_available">No card is available.</string>
    <string name="re_order">RE-ORDER</string>
    <string name="viewStatus">View Status</string>
    <string name="order_no">Order No:</string>
    <string name="more_products">More Product(s)</string>
    <string name="choose_delievryAddress">Choose Delivery Address</string>
    <string name="confirm_address">confirm address</string>
    <string name="address">Address</string>
    <string name="placed">Placed</string>
    <string name="delivered_on">Delivered on</string>
    <string name="confirmed">Confirmed</string>
    <string name="price">Price:</string>
    <string name="proceed">PROCEED</string>
    <string name="thanku_for_order">Thank you so much for your order.</string>
    <string name="goto_my_orders">Go to My Orders</string>
    <string name="order_confirmed">Order Confirmed</string>
    <string name="oops_tnasaction_failed">Oops Transaction Failed</string>
    <string name="your_transaction_is_failed">Your transaction has been failed due to some technical reason.</string>
    <string name="retry_payment">Retry Payment</string>
    <string name="that_is_canceled">That’s it. Canceled.</string>
    <string name="your_order_is_cancled_success">Your order has been successfully canceled. If money is debited, it wil be refunded without any hassle.</string>
    <string name="goto_home">Go to Home</string>
    <string name="price_change">Some of the items in your cart are either not available at this new store or the prices may have changed. Please review below.</string>
</resources>