<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/profile_back"
    android:id="@+id/LLView"
    android:layout_height="match_parent"
    >
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/profile_back"
    tools:context="com.cheersondemand.view.fragments.FragmentCart">

    <TextView
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:paddingTop="15dp"
        android:textStyle="bold"
        android:id="@+id/tvMyCart"

        android:fontFamily="@font/sf_ui_display_regular"
        android:gravity="center|center_vertical"
        android:textColor="@color/profile_text_color"
        android:textSize="16.3sp"
        android:text="@string/my_cart" />
<View
    android:id="@+id/viewLine"
    android:background="@color/hint_color"
    android:layout_width="match_parent"
    android:layout_height="1dp"/>
    <RelativeLayout
        android:id="@+id/rlStoreAlert"
        android:background="@color/orange"
        android:layout_width="match_parent"
        android:minHeight="40dp"
        android:padding="10dp"
        android:visibility="gone"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/ivAlert"
            android:layout_centerVertical="true"
            android:src="@drawable/error_icon"
            android:layout_width="30dp"
            android:layout_height="30dp" />
    <TextView
        android:layout_marginLeft="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="left"
        android:layout_toRightOf="@id/ivAlert"

        android:id="@+id/tvStoreClosed"
        android:fontFamily="@font/sf_ui_display_regular"
        android:gravity="center|center_vertical"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:text="@string/price_change" />
    </RelativeLayout>
    <LinearLayout
        android:visibility="gone"

        android:layout_marginTop="5dp"
        android:background="@color/white"
        android:id="@+id/llNoProductInCount"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp">

        <ImageView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/no_notification" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/sf_ui_display_regular"
            android:gravity="center_horizontal"
            android:text="@string/no_product_in_cart_yet"
            android:textColor="@color/profile_text_color"
            android:textSize="16.3sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_ui_display_regular"
            android:gravity="center_horizontal"

            android:text="@string/browse_for_product_or_checkout"
            android:textColor="@color/profile_updated_text_color"
            android:textSize="14.4sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_ui_display_regular"
            android:gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/enjoy_shopping_"
            android:textColor="@color/profile_updated_text_color"
            android:textSize="14.4sp" />

        <Button
            android:id="@+id/btnBrowseProduct"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_button_enable"
            android:fontFamily="@font/sf_ui_display_regular"
            android:text="@string/continue_shopping"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="13.4sp" />
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rvCartList"
        android:layout_marginBottom="60dp"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>

    <Button
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:id="@+id/btnProceed"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/bg_button_enable"
        android:fontFamily="@font/sf_ui_display_regular"
        android:text="@string/proceed"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="13.4sp" />
</RelativeLayout>